--- a/404.html
+++ b/404.html
@@ -7,17 +7,17 @@
       const isIOS = /iPad|iPhone|iPod/.test(userAgent);
       const isAndroid = /Android/.test(userAgent);
 
-      const currentPageUrl = window.location.href.replace('https://', '');
+      const currentPageUrl = window.location.href.replace("https://", "");
 
-      let customUrl = '';
-      let storeUrl = '';
+      let customUrl = "";
+      let storeUrl = "";
 
       if (isIOS) {
         customUrl = `snapfy-app://${currentPageUrl}`;
-        storeUrl = 'https://apps.apple.com/app/idtest';
+        storeUrl = "https://apps.apple.com/app/id6698855028";
       } else if (isAndroid) {
-        const scheme = 'snapfy-app';
-        const package = 'app.archonlabs.snapfy';
+        const scheme = "snapfy-app";
+        const package = "app.archonlabs.snapfy";
 
         customUrl = `intent://${currentPageUrl}#Intent;scheme=${scheme};package=${package};end`;
         storeUrl = `https://play.google.com/store/apps/details?id=${package}`;
